// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`City renders component correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item"
    href="#"
    onClick={[MockFunction]}
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;

exports[`City renders component correctly with active city 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
    onClick={[MockFunction]}
  >
    <span>
      Amsterdam
    </span>
  </a>
</li>
`;
